--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,14 @@
 language: python
 
 python:
-    - 2.6
     - 2.7
 
 env:
-  - TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk PYOPENSSL=PyOpenSSL
-  - TWISTED=Twisted==13.0.0 PYOPENSSL=PyOpenSSL
-  - TWISTED=Twisted==12.3.0 PYOPENSSL=PyOpenSSL
-  - TWISTED=Twisted==12.2.0 PYOPENSSL=PyOpenSSL
-  - TWISTED=Twisted==12.1.0 PYOPENSSL=PyOpenSSL
-  - TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk PYOPENSSL=
-  - TWISTED=Twisted==13.0.0 PYOPENSSL=
-  - TWISTED=Twisted==12.3.0 PYOPENSSL=
-  - TWISTED=Twisted==12.2.0 PYOPENSSL=
-  - TWISTED=Twisted==12.1.0 PYOPENSSL=
+  - TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+  - TWISTED=Twisted==13.0.0
+  - TWISTED=Twisted==12.3.0
+  - TWISTED=Twisted==12.2.0
+  - TWISTED=Twisted==12.1.0
 
 install:
   - pip install $TWISTED --use-mirrors
