--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,22 @@ language: python
 
 python:
     - 2.7
+    - pypy
 
 env:
-  - TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
-  - TWISTED=Twisted==13.0.0
-  - TWISTED=Twisted==12.3.0
-  - TWISTED=Twisted==12.2.0
-  - TWISTED=Twisted==12.1.0
+    - TWISTED=svn+svn://svn.twistedmatrix.com/svn/Twisted/trunk
+    - TWISTED=Twisted==13.2.0
+    - TWISTED=Twisted==13.1.0
+    - TWISTED=Twisted==13.0.0
+    - TWISTED=Twisted==12.3.0
+    - TWISTED=Twisted==12.2.0
+    - TWISTED=Twisted==12.1.0
 
 install:
-  - pip install $TWISTED --use-mirrors
-  - pip install simplejson --use-mirrors
+    - pip install pyflakes --use-mirrors
+    - pip install $TWISTED --use-mirrors
+    - python setup.py install
 
 script:
-  - trial vor
+    - pyflakes vor
+    - trial vor
