--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
 install:
     - pip install pyflakes --use-mirrors
     - pip install $TWISTED --use-mirrors
-    - python setup.py install
+    - pip install -r requirements.txt
 
 script:
     - pyflakes vor
